--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
   <body>
     <div id="root"></div>
+    <div id="intersector"></div>
     <!-- <header class="header">
       <div class="wrapper">
         <img src="./images/logo.png" alt="" />
